# Social-Robot-Project

./: DecisionTree.py  README.md  Robot.py  face idea.txt  outpipe
Documentation/: Documentation_Core.docx  Documentation_MotionControl.docx  Documentation_UI.docx  Documentation_cv_detect.docx  Documentation_py_voice.docx  face_recognition_report.ods  facepp_train_gui.doc  fpp_lib.doc  lib_train.doc  opencv.sh  related_packages.sh  test_ui.doc
application/: DefaultControl.py  EmotionDetect.py  MarkerAPI.py  ObjectRecognition.py  PersonTrack.py  PersonTrackToCloud.py  Roam.py  TrainFaceRecognition.py
application/trainface/: data_definition.txt
components/: Components.py
data/arm_trajectory/: back_wave  back_wave~  clap  eryue  eway  feel_wrong  finger_point  finger_point~  follow_me  game_1  game_2  game_3  luoshen  say_no  wave  wave~  zhu
data/music/: childhood  farewell  farewell_2  happy_birthday  joy  mother  music_2  tonghua  tonghua~  xueronghua
legacy/: AI.py  AddNewPerson.txt  Basic.py  CVDetect.py  CVDetectUpdate.py  Core.py  LD3320_test  MarkerFinder.py  MarkerGenerate.py  MotionControl.py  Myanswer.ini  Mylist.ini  WholeSystem.py  camera_matrix.txt  camtest.py  cv_web.py  main_gui.py  temp_data  test_ui.py  voice_lib.py  voice_reco.py  voice_temp.py
legacy/ewaybot_kinect/Sample/: readme.MD
legacy/ewaybot_kinect/Sample/NiSimpleViewer/: CMakeLists.txt
legacy/ewaybot_kinect/Sample/NiSimpleViewer/src/: NiSimpleViewer.cpp  NiSimpleViewer.cpp~
legacy/ewaybot_kinect/Sample/Players/: .gitignore  CMakeLists.txt  CMakeLists.txt~
legacy/ewaybot_kinect/Sample/Players/src/: main.cpp  (+1 more)
legacy/ewaybot_kinect/Sample/test_cv_ni/: CMakeLists.txt  CMakeLists.txt~
legacy/ewaybot_kinect/nite2/: CMakeLists.txt
legacy/ewaybot_kinect/nite2/src/: main.cpp
legacy/ewaybot_kinect/openni2/: CMakeLists.txt  CMakeLists.txt~
legacy/ewaybot_kinect/openni2/src/: main.cpp
legacy/ewaybot_kinect/sample_cmake/: CMakeLists.txt
legacy/web_cv/: README.html  README.md  cv_ros.py  test.launch
robot_startup/: RobotConfigLegacy.py  robotconfig.py  robotconfigApp.py
(+1 files in other folders)
